--- a/app/src/main/res/layout/activity_splashsc.xml
+++ b/app/src/main/res/layout/activity_splashsc.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#471D43">
+    android:background="@color/c_471D43">
 
     <ImageView
         android:id="@+id/mealgo"
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/logo_mealgo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
