--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#74687C"
+    android:background="@color/lore"
     tools:context=".LoginActivity">
     
     <LinearLayout
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="LOGIN"
-            android:textColor="#471D43"
+            android:textColor="@color/c_471D43"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="15dp"/>
@@ -44,7 +44,7 @@
             android:background="@drawable/rounded_edittext"
             android:hint="Enter Email Address"
             android:padding="14dp"
-            android:textColor="#471D43"
+            android:textColor="@color/c_471D43"
             android:textSize="20sp"
             android:layout_marginTop="15dp" />
 
@@ -55,22 +55,9 @@
             android:background="@drawable/rounded_edittext"
             android:hint="Enter Password"
             android:padding="14dp"
-            android:textColor="#471D43"
+            android:textColor="@color/c_471D43"
             android:textSize="20sp"
             android:layout_marginTop="10dp" />
-
-        <Button
-            android:id="@+id/forgotpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignStart="@id/loginPassword"
-            android:background="@android:color/transparent"
-            android:padding="5dp"
-            android:text="Forgot Password?"
-            android:textAllCaps="false"
-            android:textColor="#471D43"
-            android:textSize="15sp"
-            android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginButton"
@@ -81,10 +68,10 @@
         android:padding="5dp"
         android:text="LOGIN"
         android:gravity="center"
-        android:textColor="#F5EFFF"
+        android:textColor="@color/c_F5EFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="30dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -98,7 +85,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="start"
             android:text="Don't have an account?"
-            android:textColor="#471D43"
+            android:textColor="@color/c_471D43"
             android:textSize="13sp"
             android:textStyle="bold"
             android:padding="2dp"
@@ -115,7 +102,7 @@
             android:paddingStart="2dp"
             android:text="Register now"
             android:textAllCaps="false"
-            android:textColor="#471D43"
+            android:textColor="@color/c_471D43"
             android:textSize="15sp"
             android:textStyle="bold" />
 
