--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lore">#74687C</color>
+    <color name="c_471D43">#471D43</color>
+    <color name="c_F5EFFF">#F5EFFF</color>
 </resources>
