--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <colors name="c_ff0000">#FF0000</colors>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lore">#74687C</color>
-    <color name="c_471D43">#471D43</color>
-    <color name="c_F5EFFF">#F5EFFF</color>
+    <color name="c_74687c">#74687C</color>
+    <color name="c_471d43">#471D43</color>
+    <color name="c_f5Efff">#F5EFFF</color>
+    <color name="c_c8bed1">#C8BED1</color>
 </resources>
