--- a/app/src/main/res/layout/activity_splashsc.xml
+++ b/app/src/main/res/layout/activity_splashsc.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/c_471D43">
+    android:background="@color/c_471d43">
 
     <ImageView
         android:id="@+id/mealgo"
