--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
-            android:text="Judul Menu"
+            android:text="@string/menu1"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/sample_image" />
+        android:src="@drawable/rounded_ffffff" />
 
     <ScrollView
         android:id="@+id/scroll_view"
@@ -78,12 +78,12 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_text"
-                android:textStyle="bold"
+                android:layout_height="44dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/desc1"
                 android:textColor="#000000"
                 android:textSize="14sp"
-                android:layout_marginBottom="16dp" />
+                android:textStyle="bold" />
 
             <!-- Bahan-bahan -->
             <TextView
