--- a/app/src/main/res/layout/activity_whole30.xml
+++ b/app/src/main/res/layout/activity_whole30.xml
@@ -127,20 +127,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="20dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/rounded_c8bed1"
                 android:elevation="4dp"
-                android:layout_marginBottom="15dp">
+                android:orientation="horizontal"
+                android:padding="20dp">
 
                 <ImageButton
                     android:layout_width="140dp"
                     android:layout_height="140dp"
                     android:layout_marginEnd="16dp"
                     android:background="@null"
+                    android:contentDescription="@string/GambarMenu6"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/menu6"
-                    android:contentDescription="@string/GambarMenu6" />
+                    android:src="@drawable/menu6" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -152,55 +152,55 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/menu6"
+                        android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/longdesc6"
-                        android:textSize="14sp"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
                     <!-- Action Button -->
                     <Button
                         android:layout_width="69dp"
                         android:layout_height="48dp"
+                        android:layout_marginTop="-16dp"
                         android:background="transparent"
                         android:text="@string/Read_more"
+                        android:textAllCaps="false"
                         android:textColor="@color/black"
                         android:textSize="14sp"
-                        android:textAllCaps="false"
                         android:textStyle="bold"
-                        android:layout_marginTop="-16dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
                         android:layout_marginTop="-8dp"
-                        android:background="@drawable/rounded_74687c">
+                        android:background="@drawable/rounded_74687c"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginStart="6dp"
-                            android:src="@drawable/time_icon"
-                            android:contentDescription="@string/Time" />
+                            android:contentDescription="@string/Time"
+                            android:src="@drawable/time_icon" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/time1"
-                            android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/white"
                             android:layout_marginStart="2dp"
-                            android:layout_marginEnd="10dp"/>
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/time1"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
