--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,6 +37,7 @@
 
         <!-- Buttons Inside Drawable -->
         <Button
+            android:id="@+id/GlutenFreebutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Gluten_Free"
@@ -53,6 +54,7 @@
             android:drawableSize="24dp" />
 
         <Button
+            android:id="@+id/VeganButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Vegan"
@@ -69,6 +71,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/KetoButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Keto"
@@ -85,6 +88,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/PaleoButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Paleo"
@@ -101,6 +105,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/LowCarbButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Low_Carb"
@@ -117,6 +122,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/MedDietButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/MediterraneanFull"
@@ -133,6 +139,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/IFButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Interminttent_FastingFull"
@@ -149,6 +156,7 @@
             android:drawableSize="24dp"/>
 
         <Button
+            android:id="@+id/Whole30Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Whole30"
